fix: title layout breaking fixed

--- a/frontend/src/components/AddTask/addtask.module.css
+++ b/frontend/src/components/AddTask/addtask.module.css
@@ -12,7 +12,7 @@
   .inputTask {
     border: 1px solid #0d0d0d;
     min-width: 200px;
-    width: 500px;
+    width: 100%;
     height: 40px;
     border-radius: var(--border-radius);
     background-color: #262626;
