--- a/frontend/src/pages/home/home.module.css
+++ b/frontend/src/pages/home/home.module.css
@@ -25,6 +25,7 @@
 .mainContainer {
   display: flex;
   flex-direction: column;
-  max-width: 90vw;
+  width: clamp(200px, 500px, 90vw);
+  margin-bottom: 5%;
 }
 
